# typealot

./: CMakeLists.txt  LICENSE  README.md
data/: words.txt
src/: main.c
